--- a/templates/main/edu_overview.html
+++ b/templates/main/edu_overview.html
@@ -1,12 +1,32 @@
 {% extends "main/layout.html" %}
 
 {% block body %}
-    <h1>{{content.title}}</h1>
-    <p>{{content.description}}</p>
-    <h3>{{content.price}} ریال</h3>
-    <form action="{% url 'main:edu_content' content.slug %}" method="post">
-        {% csrf_token %}
+    <header>
+        <div class="header_banner">
+            <a id="info_main" class="header_main"><h1>محتوای آموزشی</h1></a>
+            <a class="back_btn" href="{% url 'main:edu' %}">بازگشت</a>
+        </div>
+    </header>
+    <section>
+        <div class="ow">
+            <div class="ow_container">
+                <img class="ow_img"  src="{{content.cover.url}}" alt="">
+                <div class="ow_title">
+                    <h2>{{content.title}}</h2>
+                </div>
+            </div>
+            <div class="ow_description">
+                <p class="ow_txt">
+                    {{content.description}}
+                    <br>
+                    <span class="ow_price">{{content.price}} ریال</span>
+                </p>
+                <form action="{% url 'main:edu_content' content.slug %}" method="post">
+                    {% csrf_token %}   
+                    <input  class="ow_btn" type="submit" name="submit" value="خرید دوره">
+                </form>
+            </div>
+        </div>
         
-        <input type="submit" name="submit" value="submit">
-    </form>
+    </section>
 {% endblock body %}
