--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -5,9 +5,12 @@
 {% block body %}
     <header>
         <div class="header_banner">
-            <a class="header_main" href="{% url 'main:index' %}"><h1>Taek Media</h1></a>
+            <a class="header_main" href="{% url 'main:index' %}"><h1>Taek Sport</h1></a>
        </div>
     </header>
+    <section style="text-align: center;">
+        <div id="pos-article-display-79243"></div>
+    </section>
     <section>
 
         <div class="btn_list">
@@ -25,7 +28,7 @@
             </div>
             <div>
                 <a class="small_btn" target="_blank" href="https://fa.wikipedia.org/wiki/%D8%AA%DA%A9%D9%88%D8%A7%D9%86%D8%AF%D9%88#"><h2 class="btn_txt">دربارۀ تکواندو</h2></a>
-                <a class="small_btn" href="{% url 'main:edu' %}"><h2 class="btn_txt">دربارۀ ما</h2></a>
+                <a class="small_btn" href="{% url 'main:about' %}"><h2 class="btn_txt">دربارۀ ما</h2></a>
             </div>
         </div>
     </section>
