--- a/templates/sorena/index.html
+++ b/templates/sorena/index.html
@@ -13,14 +13,14 @@
                 <a class="big_btn" href="{% url 'sorena:info' %}"><h2 class="btn_txt">ثبت اطلاعات ورزش کار</h2></a>
             </div>
             <div>
-                <a class="big_btn" href="{% url 'sorena:index' %}"><h2 class="btn_txt">لیست کلاس های ورزشی</h2></a>
+                <a class="big_btn" href="{% url 'sorena:schedule' %}"><h2 class="btn_txt">لیست کلاس های ورزشی</h2></a>
             </div>
             <div>
-                <a class="small_btn" href="{% url 'sorena:about' %}"><h2 class="btn_txt">تماس با ما</h2></a>
+                <a class="small_btn" href="{% url 'sorena:contact' %}"><h2 class="btn_txt">تماس با ما</h2></a>
                 <a class="small_btn" href="{% url 'sorena:about' %}"><h2 class="btn_txt">دربارۀ ما</h2></a>
             </div>
             <div>
-                <a id="taekmedia_btn" class="big_btn" href="{% url 'main:index' %}"><h2 class="btn_txt">Taek Media</h2></a>
+                <a id="taekmedia_btn" class="big_btn" href="{% url 'main:index' %}"><h2 class="btn_txt">Taek Sport</h2></a>
             </div>
         </div>
     </section>
